--- a/style.css
+++ b/style.css
@@ -3,15 +3,30 @@
     color: white;
     font-family: sans-serif, "Times New Roman", Helvetica;
     text-align: center;
+    box-sizing: border-box;
 }
 
 h1{
     font-size: 32px;
+    margin-bottom: 32px;
 }
 
 h2{
     font-size: 24px;
     text-decoration: underline;
+}
+.testing{
+    margin: auto;
+    width: 50%;
+}
+.ulHomePage{
+    width: 50%;
+    margin: auto;
+}
+
+.ulHomePage li{
+    text-align: center;
+    list-style-type: none;
 }
 
 ol li,
@@ -27,7 +42,6 @@ ul li{
 
 ul{
     font-size: 18px;
-    list-style-type: none;
 }
 
 li{
